        PR 11170         * arm-dis.c (print_arm_address): Do not ignore negative bit in PC         based post-indexed addressing.